[package]
name = "relay-modbus-controller"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.2.32"
tokio-modbus = { version = "0.5.2", default-features = false, features = ["rtu"] }
tokio-serial = "5.4"
tokio = { version = "1.17", features = ["macros", "rt", "rt-multi-thread", "time"] }
