[package]
name = "relay-modbus-controller"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.26", default-features = false }
fltk = "1.2.32"
tokio-modbus = { version = "0.5.2", default-features = false, features = ["rtu"] }
tokio-serial = "5.4.3"
tokio = { version = "1.19.2", features = ["macros", "rt", "rt-multi-thread", "time"] }
